# idea-to-production

./: .gitignore  .gitleaks.toml  CLAUDE.md  DIAGRAM_REVIEW.md  I2P_REVIEW.md  I2P_SELF_HEALING_PLAN.md  IDEA_COST.jsonl  LICENSE  PR_REVIEW.md  README.md  REVIEW_ACTION_PLAN.md  SOUL.md  VISUAL_UPGRADE_PLAN.md
plugins/flow/flow-mcp/: .gitignore  Cargo.toml  README.md  Rakefile  build.rs
plugins/flow/flow-mcp/exe/: flow-mcp
plugins/flow/flow-mcp/lib/: flow_mcp.rb
plugins/flow/flow-mcp/lib/flow_mcp/: annotation.rb  config.rb  errors.rb  event.rb  history.rb  ids.rb  mcp.rb  model.rb  roadmap_view.rb  server.rb  store.rb  telemetry.rb  version.rb
plugins/flow/flow-mcp/spec/: EARS.md  README.md
plugins/flow/flow-mcp/spec/features/: comment_loop.feature  connections.feature  events.feature  gates.feature  identity.feature  ingest.feature  lifecycle.feature  persistence.feature  protocol.feature  read_board.feature  render_and_ping.feature  (+3 more)
plugins/flow/flow-mcp/src/: mcp_dispatch_intest.rs  store.rs  story_gate_persist_intest.rs
plugins/flow/flow-mcp/test/: cov_report.rb  helper.rb  smoke.rb  test_domain.rb  test_features.rb  test_history_config.rb  test_mcp.rb  test_server.rb  test_stdio_story.rb  test_store.rb
plugins/mission-control/flow-server/: .gitignore  Cargo.toml  README.md  build.rs
plugins/mission-control/flow-server/.foundry/: [37]-ears.md  [37].feature
plugins/mission-control/flow-server/src/: api.rs  auth.rs  config.rs  history.rs  http_contract_intest.rs  http_surface_intest.rs  lib.rs  main.rs  mcp.rs  mcp_contract_intest.rs  mcp_dispatch_intest.rs  mcp_surface_intest.rs  store.rs  store_contract_intest.rs  story_gate_persist_intest.rs  ws.rs  ws_contract_intest.rs
plugins/mission-control/flow-server/static/: app.css  app.js  index.html  package-lock.json  package.json  vitest.config.js
plugins/mission-control/flow-server/tests/: http_contract.rs  mcp_contract.rs  store_contract.rs  ws_contract.rs
plugins/operate/flow-server/: Cargo.toml  README.md  build.rs
plugins/operate/flow-server/src/: api.rs  auth.rs  lib.rs  mcp.rs  mcp_dispatch_intest.rs  store.rs  store_contract_intest.rs
plugins/operate/flow-server/tests/: stdio_story.rs
(+1616 files in other folders)
