[package]
name = "flow-mcp"
version = "0.2.3"
edition = "2021"
description = "Flow MCP — sole writer of flow state; exposes the roadmap as an MCP verb surface over stdio (roadmap #1, #39, #97)."
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "macros", "fs", "io-util", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5"
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "macros", "fs", "io-util", "process"] }
